# FightingGameEngine

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  FindSDL2.cmake  LICENSE  README.md  arch.text  commandDef.rns  cscope.out  def.json.example  input.kai  stateDef.rns
char_example/: buttonconf.json  def.json
char_example/scripts/: hurt.kai  input.kai  jump_recovery.kai
char_example/scripts/attacks/: crouch_k_cancels.kai  crouch_p.kai  crouch_p_cancels.kai  crouch_s.kai  jump_k.kai  jump_k_cancels.kai  jump_s.kai  stand_k.kai  stand_k_cancels.kai  stand_p.kai  stand_p_cancels.kai  stand_s.kai  upslash.kai
char_example/scripts/movement/: airdash_b.kai  airdash_f.kai  dash_f.kai  jump_b.kai  jump_f.kai  jump_n.kai
char_example/sprites/: PUT_SPRITES_IN_HERE.txt
cmake_modules/: FindSDL2Mixer.cmake
data/: buttonconf.json  buttonconf.json.bak  p1Config.xml  p1buttonconf.json  p2buttonconf.json
data/characters/alucard/: def.json  def.json.example
data/characters/alucard/scripts/: air_pushblock.kai  air_recovery.kai  air_throw.kai  being_air_thrown.kai  being_air_thrown_back.kai  being_back_thrown.kai  being_thrown.kai  block_air.kai  block_crouch.kai  block_crouch_cancels.kai  block_stand.kai  block_stand_cancels.kai  blowback_falling.kai  blowback_trip.kai  burst.kai  dead_falling.kai  dead_knockdown.kai  dead_standing.kai  groundbounce_bounce.kai  groundbounce_fling.kai  hurt.kai  hurt_cancels.kai  hurt_recovery.kai  input.kai  jump_recovery.kai  knockdown.kai  prematch.kai  push_block_stand.kai  wakeup.kai
data/characters/danteshaun/: assets.json  def.json
data/characters/danteshaun/scripts/: input.kai  prematch.kai
data/characters/samurai/: def.json
data/characters/samurai/scripts/: air_hurt.kai  air_hurt_recovery.kai  air_pushblock.kai  air_recovery.kai  being_air_thrown.kai  being_air_thrown_back.kai  being_back_thrown.kai  being_thrown.kai  block_air.kai  block_crouch.kai  block_crouch_cancels.kai  block_stand_cancels.kai  blowback_falling.kai  burst.kai  dead_falling.kai  dead_knockdown.kai  groundbounce_bounce.kai  hurt.kai  (+9 more)
data/characters/senjin/: keyframexample.htm
data/characters/template/: def.json
holy_grail/part1/: So you want to be a pixel artist_ - Photoshop tutorials and Pixelart tutorials, smiles and pixelart - Gas13.ru.html
holy_grail/part2/: So you want to be a pixel artist_ - Photoshop tutorials and Pixelart tutorials, smiles and pixelart - Gas13.ru.html
holy_grail/part3/: So you want to be a pixel artist_ - Photoshop tutorials and Pixelart tutorials, smiles and pixelart - Gas13.ru.html
holy_grail/part3/So you want to be a pixel artist_ - Photoshop tutorials and Pixelart tutorials, smiles and pixelart - Gas13.ru_files/: style.css  watch.js
include/: Util.h  game.h  gameState.h  gameTexture.h  graphics.h  imageSurface.h  input.h  inputManager.h  libGGPO.dylib  menuState.h  observer.h  openingScene.h  openingState.h  scene.h  stateManager.h  subject.h  textureManager.h  virtualController.h
include/audio/: AudioManager.h
include/character_state/: CharStateManager.h  CharacterState.h  HitScript.h  StateController.h  StateDef.h
include/character_state/controllers/: StateController.h
include/domain_language/: ByteCode.h  Common.h  Compiler.h  Scanner.h  Script.h  Stack.h  Value.h  VirtualMachine.h
include/game_objects/: Character.h  Entity.h  GameObject.h  Popup.h  Stage.h  VisualEffect.h  VisualObject.h
include/graphics/: Animation.h  Camera.h  GameTexture.h  Graphics.h  ImageSurface.h  TextureManager.h
include/input/: CommandCompiler.h  CommandScanner.h  Input.h  InputManager.h  VirtualController.h
include/observer/: Observer.h  Subject.h
include/physics/: CollisionBox.h
include/scenes/: OpeningScene.h  Scene.h
include/screens/: FightScreen.h  MenuScreen.h  NetConnectScreen.h  OpeningScreen.h  Screen.h
include/states/: ConfigState.h  FightState.h  GameState.h  MenuState.h  NetConnectState.h  OpeningState.h  StackableGameState.h  StateCollection.h  StateManager.h
include/util/: Menu.h  Util.h
src/: game.cpp  gameTexture.cpp  graphics.cpp  imageSurface.cpp  input.cpp  inputManager.cpp  main.cpp  menuState.cpp  openingScene.cpp  openingState.cpp  textureManager.cpp  virtualController.cpp
src/character_state/: CharStateManager.cpp  HitScript.cpp  StateControllerr.cpp  StateDef.cpp
src/domain_language/: Compiler.cpp  Scanner.cpp  Script.cpp  Stack.cpp  Value.cpp  VirtualMachine.cpp
src/game_objects/: Character.cpp  Entity.cpp  Popup.cpp  Stage.cpp  VisualEffect.cpp
src/graphics/: Animation.cpp  Camera.cpp  GameTexture.cpp  Graphics.cpp  Imagesurface.cpp  TextureManager.cpp
src/input/: CommandCompiler.cpp  CommandScanner.cpp  Input.cpp  InputManager.cpp  VirtualController.cpp
src/physics/: CollisionBox.cpp
src/scenes/: OpeningScene.cpp
src/screens/: FightScreen.cpp  MenuScreen.cpp  NetConnectScreen.cpp  OpeningScreen.cpp
src/states/: ConfigState.cpp  FightState.cpp  MenuState.cpp  NetConnectState.cpp  OpeningState.cpp  StateCollection.cpp  StateManager.cpp
src/util/: Menu.cpp
tmp/: copy.ser
(+244 files in other folders)
